Build Html Objects and Queue

--- a/EventHandler.html
+++ b/EventHandler.html
@@ -59,7 +59,10 @@
 			<div class="Box" id="LowerLeft"> </div>
 			<div class="Box" id="LowerRight"> </div>
 		</div>
-	<button onclick="TestAnimation();">Click me</button>
+	<button onclick="AddFan();">Add FanEvent</button>
+	<button onclick="AddInvite();">Add InviteEvent</button>
+	<button onclick="AddMoment();">Add MomentEvent</button>
+
 
 	</body>
 </html>
